crucible-cli/test-data/simulate/seq-test3.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====

Prove:
  test-data/simulate/seq-test3.cbl:95:5: error: in eqseq
  value mismatch!
  eq (ite cb1@0:b cx@2:i cy@3:i) (ite cb1@0:b cx@2:i cy@3:i)
PROVED

Prove:
  test-data/simulate/seq-test3.cbl:95:5: error: in eqseq
  value mismatch!
  eq (ite cb2@1:b cz@4:i cw@5:i) (ite cb2@1:b cz@4:i cw@5:i)
PROVED

Prove:
  test-data/simulate/seq-test3.cbl:56:5: error: in main
  head 1 eq check
  eq (ite cb1@0:b cx@2:i cy@3:i) (ite cb1@0:b cx@2:i cy@3:i)
PROVED

Prove:
  test-data/simulate/seq-test3.cbl:57:5: error: in main
  head 1 check
  eq (ite cb1@0:b cx@2:i cy@3:i) (ite cb1@0:b cx@2:i cy@3:i)
PROVED

Prove:
  test-data/simulate/seq-test3.cbl:95:5: error: in eqseq
  value mismatch!
  eq (ite cb2@1:b cz@4:i cw@5:i) (ite cb2@1:b cz@4:i cw@5:i)
PROVED

Prove:
  test-data/simulate/seq-test3.cbl:95:5: error: in eqseq
  value mismatch!
  eq (ite cb2@1:b cz@4:i cw@5:i) (ite cb2@1:b cz@4:i cw@5:i)
PROVED

Prove:
  test-data/simulate/seq-test3.cbl:95:5: error: in eqseq
  value mismatch!
  eq (ite cb2@1:b cz@4:i cw@5:i) (ite cb2@1:b cz@4:i cw@5:i)
PROVED

Prove:
  test-data/simulate/seq-test3.cbl:95:5: error: in eqseq
  value mismatch!
  eq (ite cb2@1:b cz@4:i cw@5:i) (ite cb2@1:b cz@4:i cw@5:i)
PROVED
